[Success] Logo smaller on mobile + h1 mobile across site + hero height fix

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -125,13 +125,6 @@
   }
   .hero,
   .backVideo {
-    height: 475px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .hero,
-  .mobileHero,
-  .backVideo {
-    height: 450px;
+    height: 525px;
   }
 }
